fixed spacing issue

--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ button {
 	font-size: 2rem;;
 }
 .content-b {
-	margin-left: 8rem;
+	margin-left: 0rem;
 }
 img {
 	width: 45rem;
